--- a/OptimizerUtils/pom.xml
+++ b/OptimizerUtils/pom.xml
@@ -107,6 +107,11 @@
 				<artifactId>unbbayes</artifactId>
 				<version>4.21.18</version>
 			</dependency>
+			<dependency>
+				<groupId>br.unb.cic</groupId>
+				<artifactId>unbbayes.prs.bn.inference.extension.NoisyMax</artifactId>
+				<version>0.0.1</version>
+			</dependency>
 			
 			<!-- Libraries for reading csv files -->
 			<!-- http://mvnrepository.com/artifact/net.sf.opencsv/opencsv -->
