--- a/unbbayes.prs.mebn/plugins/unbbayes.prs.mebn/plugin.xml
+++ b/unbbayes.prs.mebn/plugins/unbbayes.prs.mebn/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" ?>
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
 <!-- This is the plugin descriptor for UnBBayes' MEBN module. -->
-<plugin id="unbbayes.prs.mebn" version="1.14.13">
+<plugin id="unbbayes.prs.mebn" version="1.18.13">
     <requires>
         <import plugin-id="unbbayes.util.extension.core" plugin-version="4.17.8"/>
     </requires>
@@ -15,7 +15,7 @@
         </library>
         <!-- It seems that loaders does not work as expected on jar files -->
         <!-- If you change/add the libraries, change/add these library declaration too -->
-        <library id="unbbayes.prs.mebn" path="unbbayes.prs.mebn-1.14.13.jar" type="code" >
+        <library id="unbbayes.prs.mebn" path="unbbayes.prs.mebn-1.18.13.jar" type="code" >
         	<export prefix="*"/>
         </library>
         <library id="iri" path="lib/iri-2.4.jar" type="code">
@@ -100,6 +100,7 @@
         <parameter-def id="name"/>
         <parameter-def multiplicity="none-or-one" id="optionPanel"/>
     </extension-point>
+    
     
     <!-- MEBN editor extension point. 
      	 Hot plug is enabled.
@@ -196,6 +197,40 @@
 		<parameter-def id="cursor" multiplicity="none-or-one" />
     </extension-point>
     
+    
+    <!-- User-defined LPD function extension point. 
+     	 Hot plug is enabled.
+    	 This extension point is basically a set of different classes which implements
+    	 unbbayes.prs.mebn.compiler.extension.IUserDefinedFunctionBuilder, in order to add new
+    	 user-defined LPD functions to compilers of LPD scripts of this MEBN
+    	 module. The class must contain a public default constructor (no parameters).
+    	 	Parameters:
+    	 		class: this is a class implementing unbbayes.prs.mebn.compiler.extension.IUserDefinedFunctionBuilder. 
+    	 		       It MUST provide a default constructor with no parameters.
+    	 	         
+    -->
+    <extension-point id="UserDefinedLPDFunction">
+        <parameter-def id="class"/>
+    </extension-point>
+    
+    <!-- User-defined boolean LPD function extension point. 
+     	 Hot plug is enabled.
+    	 This extension point is basically a set of different classes which implements
+    	 unbbayes.prs.mebn.compiler.extension.IUserDefinedBooleanFunctionBuilder, in order to add new
+    	 user-defined boolean LPD functions (i.e. functions that can be called inside "if" tests) to compilers of LPD scripts of this MEBN
+    	 module. The class must contain a public default constructor (no parameters).
+    	 	Parameters:
+    	 		class: this is a class implementing unbbayes.prs.mebn.compiler.extension.IUserDefinedBooleanFunctionBuilder 
+    	 		       It MUST provide a default constructor with no parameters.
+    	 	         
+    -->
+    <extension-point id="UserDefinedBooleanLPDFunction">
+        <parameter-def id="class"/>
+    </extension-point>
+    
+    
+    
+    
     <extension plugin-id="unbbayes.util.extension.core" point-id="Module" id="MEBN">
         <parameter id="class" value="unbbayes.gui.mebn.MEBNNetworkWindow" />
         <parameter id="name" value="MEBN" />
@@ -205,6 +240,7 @@
 		<parameter id="category" value="bn" />
     </extension>
     
+   <!-- TODO migrate the following to another plugin.xml, or else version numbers of this plug-in cannot evolve independently to version numbers of MEBN plug-in -->
    <extension plugin-id="unbbayes.prs.mebn" point-id="SSBN" id="BayesBall">
         <parameter id="class" value="unbbayes.prs.mebn.ssbn.bayesballalgorithm.BayesBallSSBNGeneratorBuilder" />
         <parameter id="name" value="Bayes-Ball" />
