--- a/unbbayes.prs.mebn/pom.xml
+++ b/unbbayes.prs.mebn/pom.xml
@@ -6,7 +6,7 @@
 	<name>Multi-Entity Bayesian Network</name>
 	<!-- If you change the below version, -->
 	<!-- change version and library settings on plugin.xml too, because this is included as library -->
-	<version>1.14.13</version>
+	<version>1.18.13</version>
 	<url>http://unbbayes.sourceforge.net
 	</url>
 	<licenses>
@@ -213,8 +213,8 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -326,6 +326,26 @@
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
 			<version>2.8.1</version>
+		</dependency>
+		
+		<!-- RSyntaxTextArea is a library for text areas with syntax highlighting in swing -->
+		<!-- It's licensed under modified BSD license (the 3-clause BSD license), which is GPL compatible accordingly to https://www.gnu.org/licenses/license-list.en.html#GPLCompatibleLicenses -->
+		<dependency>
+			<groupId>com.fifesoft</groupId>
+			<artifactId>rsyntaxtextarea</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<!-- Autocomplete library of RSyntaxTextArea enables autocomplete feature in RSyntaxTextArea -->
+		<!-- It's licensed under modified BSD license (the 3-clause BSD license), which is GPL compatible accordingly to https://www.gnu.org/licenses/license-list.en.html#GPLCompatibleLicenses -->
+		<dependency>
+			<groupId>com.fifesoft</groupId>
+			<artifactId>autocomplete</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fifesoft</groupId>
+			<artifactId>rstaui</artifactId>
+			<version>2.6.0</version>
 		</dependency>
 			
 		<dependency>
