--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -218,8 +218,8 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -239,8 +239,7 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
 					<descriptors>
-						<descriptor>src/assembly/dist.xml
-						</descriptor>
+						<descriptor>src/assembly/dist.xml</descriptor>
 					</descriptors>
 				</configuration>
 			</plugin>
@@ -553,6 +552,14 @@
 			
 			
 		</dependency>
+		
+		<!-- Explicitly declare dependency to log4j, so that plug-ins can use it without having to include these jars -->
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
+		</dependency>
+		
 	</dependencies>
 	<reporting>
 		<plugins>
