plugin.xml now exports visibility of icu library for other plug-ins which depends on MEBN plug-in.

--- a/unbbayes.prs.mebn/plugins/unbbayes.prs.mebn/plugin.xml
+++ b/unbbayes.prs.mebn/plugins/unbbayes.prs.mebn/plugin.xml
@@ -36,6 +36,9 @@
         <library id="protege-owl" path="lib/protege-owl-3.2.jar" type="code">
         	<export prefix="*"/>
         </library>
+        <library id="icu4j" path="lib/icu4j-3.8.jar" type="code">
+        	<export prefix="*"/>
+        </library>
         <library id="xercesImpl" path="lib/xercesImpl-2.8.1.jar" type="code">
         	<export prefix="*"/>
         </library>
