--- a/unbbayes.io.xmlbif.version7/plugins/edu.gmu.seor.prognos.unbbayesplugin.cps/plugin.xml
+++ b/unbbayes.io.xmlbif.version7/plugins/edu.gmu.seor.prognos.unbbayesplugin.cps/plugin.xml
@@ -28,7 +28,7 @@
     <extension plugin-id="unbbayes.util.extension.core" point-id="PluginNode" id="ProbabilisticNodePluginStub">
         <parameter id="class" value="edu.gmu.seor.prognos.unbbayesplugin.gmmNode.GmmNodePluginStub" />
         <parameter id="shapeClass" value="edu.gmu.seor.prognos.unbbayesplugin.gmmNode.UShapeGMMNode" />
-        <parameter id="name" value="GMM Node" />
+        <parameter id="name" value="ContinuousNode" />
         <parameter id="panelBuilder" value= "edu.gmu.seor.prognos.unbbayesplugin.gmmNode.GmmStubPanelBuilder" />
         <parameter id="description" value="GMM node plug in" />
 		<parameter id="icon" value="icon_stub.gif" />
