--- a/unbbayes.prs.medg/pom.xml
+++ b/unbbayes.prs.medg/pom.xml
@@ -170,6 +170,12 @@
 		<dependencies>
 			<dependency>
 				<groupId>br.unb.cic</groupId>
+				<artifactId>unbbayes.prs.mebn</artifactId>
+				<version>1.18.14</version>
+				<optional>false</optional>
+			</dependency>
+			<dependency>
+				<groupId>br.unb.cic</groupId>
 				<artifactId>unbbayes.gui.mebn.ontology.protege</artifactId>
 				<version>1.2.6</version>
 				<optional>false</optional>
