--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -349,17 +349,24 @@
 
 
 		<!-- JUNIT -->
-<!-- 		<dependency> -->
 			<!--
 				JUnit is a simple framework to write repeatable tests. It is an
 				instance of the xUnit architecture for unit testing frameworks.
 				http://junit.sourceforge.net/
 			-->
-			<!-- JUnit cannot be incorporated into GPL projects, because it is released under Eclipse public license, which is incompatible with GPL -->
-<!-- 			<groupId>junit</groupId> -->
-<!-- 			<artifactId>junit</artifactId> -->
-<!-- 			<version>4.1</version> -->
-<!-- 		</dependency> -->
+			<!-- JUnit should not be included to distributables of GPL projects, because it is released under Eclipse public license, which is incompatible with GPL -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- JUNIT -->
 
 		<!-- JAXME/JAXB -->
