--- a/UnBBayes/src/main/resources/application.properties
+++ b/UnBBayes/src/main/resources/application.properties
@@ -20,7 +20,7 @@ unbbayes.controller.mebn.MEBNController.toLogNodesAndProbabilities=false
 
 ################################################
 # sets the default folder to look for plugins
-unbbayes.util.extension.manager.UnBBayesPluginContextHolder.pluginsDirectoryName=plugins
+#unbbayes.util.extension.manager.UnBBayesPluginContextHolder.pluginsDirectoryName=plugins
 # id of the core plugin (a stub plugin representing UnBBayes' core)
 unbbayes.util.extension.manager.UnBBayesPluginContextHolder.pluginCoreID=unbbayes.util.extension.core
 # id of the extension point for new node declarations using plugins
