Modified GUI to enable/disable the option of connecting decision nodes.

--- a/unbbayes.prs.medg/plugins/unbbayes.prs.medg/plugin.xml
+++ b/unbbayes.prs.medg/plugins/unbbayes.prs.medg/plugin.xml
@@ -54,5 +54,6 @@
     <extension plugin-id="unbbayes.prs.mebn" point-id="SSBN" id="SSIDGenerator">
         <parameter id="class" value="unbbayes.prs.medg.ssid.SSIDGeneratorBuilder" />
         <parameter id="name" value="SSID generator" />
+        <parameter id="optionPanel" value="unbbayes.gui.medg.ssid.SSIDOptionPanel" />
     </extension>
 </plugin>
