--- a/unbbayes.prs.medg/pom.xml
+++ b/unbbayes.prs.medg/pom.xml
@@ -180,6 +180,18 @@
 				<version>1.2.6</version>
 				<optional>false</optional>
 			</dependency>
+				<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>3.8.1</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.12</version>
+				<scope>test</scope>
+			</dependency>
 		</dependencies>
 	<reporting>
 		<plugins>
