--- a/unbbayes.prs.mebn/pom.xml
+++ b/unbbayes.prs.mebn/pom.xml
@@ -354,6 +354,29 @@
 			<version>4.22.18</version>
 			<optional>false</optional>
 		</dependency>
+		
+
+		<!-- JUNIT -->
+			<!--
+				JUnit is a simple framework to write repeatable tests. It is an
+				instance of the xUnit architecture for unit testing frameworks.
+				http://junit.sourceforge.net/
+			-->
+			<!-- JUnit should not be included to distributables of GPL projects, because it is released under Eclipse public license, which is incompatible with GPL -->
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 		</dependencies>
 	<reporting>
 		<plugins>
