--- a/unbbayes.io.medg.prowl.decision/pom.xml
+++ b/unbbayes.io.medg.prowl.decision/pom.xml
@@ -107,7 +107,7 @@
 			<dependency>
 				<groupId>br.unb.cic</groupId>
 				<artifactId>unbbayes.gui.mebn.ontology.protege</artifactId>
-				<version>1.2.6</version>
+				<version>1.2.7-SNAPSHOT</version>
 				<optional>false</optional>
 			</dependency>
 			<dependency>
