--- a/unbbayes.prs.mebn.softprwol/pom.xml
+++ b/unbbayes.prs.mebn.softprwol/pom.xml
@@ -38,8 +38,8 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>br.unb.cic</groupId>
 			<artifactId>unbbayes.gui.mebn.ontology.protege</artifactId>
-			<version>1.2.5</version>
+			<version>1.2.7-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
