--- a/unbbayes.prs.mebn/pom.xml
+++ b/unbbayes.prs.mebn/pom.xml
@@ -351,7 +351,7 @@
 		<dependency>
 			<groupId>br.unb.cic</groupId>
 			<artifactId>unbbayes</artifactId>
-			<version>4.22.18</version>
+			<version>4.22.19-SNAPSHOT</version>
 			<optional>false</optional>
 		</dependency>
 		
