Added rows in application.properties in order to avoid trace/error messages caused because such configurations were not present in the property file.

--- a/UnBBayes/src/main/resources/application.properties
+++ b/UnBBayes/src/main/resources/application.properties
@@ -27,3 +27,9 @@ unbbayes.util.extension.manager.UnBBayesPluginContextHolder.pluginCoreID=unbbaye
 unbbayes.util.extension.node.CorePluginNodeManager.pluginNodeExtensionPointID=PluginNode
 # id of the extension point for new Conditional Probability Function's declarations using plugins
 unbbayes.util.extension.manager.CoreCPFPluginManager.cpfExtensionPointID=ProbabilityFunctionPanel
+
+
+unbbayes.util.extension.node.CorePluginNodeManager.mainPluginID=unbbayes.util.extension.core
+unbbayes.util.extension.node.CorePluginNodeManager.mainExtensionPointID=PluginNode
+
+
