--- a/unbbayes.gui.mebn.ontology.protege/pom.xml
+++ b/unbbayes.gui.mebn.ontology.protege/pom.xml
@@ -166,7 +166,7 @@
 			<dependency>
 				<groupId>br.unb.cic</groupId>
 				<artifactId>unbbayes.prs.mebn</artifactId>
-				<version>1.18.14</version>
+				<version>1.19.15-SNAPSHOT</version>
 			</dependency>
 			
 			<!-- Protege 4.1 (it handles OWL2) -->
