--- a/unbbayes.prs.mebn.ontology.prowl2.textmode/pom.xml
+++ b/unbbayes.prs.mebn.ontology.prowl2.textmode/pom.xml
@@ -165,7 +165,7 @@
 			<dependency>
 				<groupId>br.unb.cic</groupId>
 				<artifactId>unbbayes.prs.mebn</artifactId>
-				<version>1.19.15</version>
+				<version>1.19.15-SNAPSHOT</version>
 			</dependency>
 			
 			<!-- Using OWLAPI as main API for handling OWL ontologies -->
