--- a/unbbayes.prs.medg/pom.xml
+++ b/unbbayes.prs.medg/pom.xml
@@ -177,7 +177,7 @@
 			<dependency>
 				<groupId>br.unb.cic</groupId>
 				<artifactId>unbbayes.gui.mebn.ontology.protege</artifactId>
-				<version>1.2.7</version>
+				<version>1.2.7-SNAPSHOT</version>
 				<optional>false</optional>
 			</dependency>
 				<dependency>
