--- a/unbbayes.learning/pom.xml
+++ b/unbbayes.learning/pom.xml
@@ -213,8 +213,8 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -239,7 +239,7 @@
 			<dependency>
 				<groupId>br.unb.cic</groupId>
 				<artifactId>unbbayes</artifactId>
-				<version>4.21.14</version>
+				<version>4.22.19-SNAPSHOT</version>
 			</dependency>
 			
 	</dependencies>
