--- a/unbbayes.prs.oobn/pom.xml
+++ b/unbbayes.prs.oobn/pom.xml
@@ -236,11 +236,11 @@
 		<dependencies>
 			<!-- This is a plugin project for UnBBayes. Since it uses classes from the core, 
 			     UnBBayes is indeed a dependency -->
-			<dependency>
-				<groupId>br.unb.cic</groupId>
-				<artifactId>unbbayes</artifactId>
-				<version>4.18.10</version>
-			</dependency>
+<!-- 			<dependency> -->
+<!-- 				<groupId>br.unb.cic</groupId> -->
+<!-- 				<artifactId>unbbayes</artifactId> -->
+<!-- 				<version>4.18.10</version> -->
+<!-- 			</dependency> -->
 			
 			<!-- This plugin has a dependency to, unbbayes.prs.msbn plugin -->
 			<dependency>
