--- a/unbbayes.simulation.montecarlo.sampling/pom.xml
+++ b/unbbayes.simulation.montecarlo.sampling/pom.xml
@@ -239,7 +239,7 @@
 			<dependency>
 				<groupId>br.unb.cic</groupId>
 				<artifactId>unbbayes</artifactId>
-				<version>4.17.8</version>
+				<version>4.22.19-SNAPSHOT</version>
 			</dependency>
 			
 	</dependencies>
