--- a/unbbayes.prs.msbn/pom.xml
+++ b/unbbayes.prs.msbn/pom.xml
@@ -239,7 +239,7 @@
 			<dependency>
 				<groupId>br.unb.cic</groupId>
 				<artifactId>unbbayes</artifactId>
-				<version>4.18.10</version>
+				<version>4.22.19-SNAPSHOT</version>
 				<!-- 
 				<version>4.0.0</version>
 				 -->
