--- a/unbbayes.datamining/pom.xml
+++ b/unbbayes.datamining/pom.xml
@@ -6,7 +6,7 @@
 	<name>UnBMiner</name>
 	<!-- If you change the below version, -->
 	<!-- change version and library settings on plugin.xml too, because this is included as library -->
-	<version>1.1.2</version>
+	<version>1.1.3-SNAPSHOT</version>
 	<url>http://unbbayes.sourceforge.net
 	</url>
 	<licenses>
@@ -213,8 +213,8 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -236,17 +236,17 @@
 		<dependencies>
 			<!-- This is a plugin project for UnBBayes. Since it uses classes from the core, 
 			     UnBBayes is indeed a dependency -->
-			<dependency>
-				<groupId>br.unb.cic</groupId>
-				<artifactId>unbbayes</artifactId>
-				<version>4.0.0</version>
-			</dependency>
+<!-- 			<dependency> -->
+<!-- 				<groupId>br.unb.cic</groupId> -->
+<!-- 				<artifactId>unbbayes</artifactId> -->
+<!-- 				<version>4.21.18</version> -->
+<!-- 			</dependency> -->
 			
 			<!-- This plugin has a dependency to, unbbayes.learning plugin -->
 			<dependency>
 				<groupId>br.unb.cic</groupId>
 				<artifactId>unbbayes.learning</artifactId>
-				<version>1.1.0</version>
+				<version>1.3.2-SNAPSHOT</version>
 			</dependency>
 			
 			<!-- PLOT-GRAPHICS -->
