--- a/UnBBayes/pom.xml
+++ b/UnBBayes/pom.xml
@@ -585,6 +585,14 @@
 		    <artifactId>mallet</artifactId>
 		    <version>2.0.8</version>
 		</dependency>
+		
+		
+		<!-- read csv files -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-csv</artifactId>
+		    <version>1.5</version>
+		</dependency>
 				
 		
 	</dependencies>
